--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    
+    "dotenv": "^16.3.1",
     "mongoose": "^6.10.1",
     "mongoose-unique-validator": "^4.0.0",
     "nodemon": "^2.0.22"
